--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1014,7 +1014,7 @@ unbestimmte Unmittelbare:
 μορφή:
   WBPh:
   - start: 271
-  - end: 274
+    end: 274
 μέθοδος:
   WBPh:
   - start: 269
@@ -1126,7 +1126,7 @@ unbestimmte Unmittelbare:
 ὕλη:
   WBPh:
   - start: 271
-  - end: 272
+    end: 272
 ῥυθμός:
   WBPh:
   - start: 266
