--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
 django-tailwind @ https://github.com/andredelft/django-tailwind/tarball/master
 betacode==1.0
 pygtrie
--r requirements-prod.txt
+Django==4.*
+gunicorn==20.*
+whitenoise==5.*
+PyYAML==5.*
+requests==2.*
+click==7.*
+tqdm==4.*
+regex
+Unidecode==1.*
+django-extensions==3.*
+fuzzysearch==0.7.3
+Markdown==3.3.6
