Update work type

--- a/index/works.yml
+++ b/index/works.yml
@@ -84,7 +84,7 @@ G:
   publisher: Vittorio Klostermann
   publisher-place: Frankfurt am Main
   title: "Reden und Zeugnisse eines Lebensweg: 1910–1976"
-  type: chapter
+  type: book
   language: german
 "GA 29/30":
   author:
