--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -21,6 +21,9 @@ Antiphon:
     start: 263
   - start: 271
   reftype: p
+Anwesen:
+  WBPh:
+  - start: 281
 Aristoteles:
   GA 29/30:
   - end: 57
@@ -76,6 +79,7 @@ Aussehen:
   WBPh:
   - end: 275
     start: 273
+  - start: 283
 Baer, Karl Ernst von:
   GA 29/30:
   - start: 378
@@ -112,6 +116,9 @@ Benommenheit, Offenheit der:
     start: 369
   - reftype: r
     start: 370
+Bewegtheit:
+  WBPh:
+  - start: 282
 Beziehung zu Seiendem als Solchem:
   GA 29/30:
   - end: 368
@@ -301,6 +308,9 @@ Geschick:
   ZuS:
   - start: 12
     suffix: f
+Gestellung in das Aussehen:
+  WBPh:
+  - start: 285
 Geviert:
   EWI:
   - start: 17
@@ -396,6 +406,7 @@ Herstellen:
   WBPh:
   - start: 272
   - start: 279
+  - start: 283
 Hitler, Adolf:
   GA 42:
   - start: 40
@@ -486,6 +497,11 @@ Meister Eckhart:
 Mensch qua Mensch:
   GA 29/30:
   - start: 414
+Metaphysics:
+  WBPh:
+  - end: 285
+    start: 284
+  reftype: w
 Miteinandersein:
   GA 29/30:
   - start: 447
@@ -972,10 +988,13 @@ unbestimmte Unmittelbare:
 δύναμις:
   WBPh:
   - start: 278
+  - end: 285
+    start: 284
 εἶδος:
   WBPh:
   - start: 273
     suffix: f
+  - start: 282
 ζῷον αλόγον:
   GA 29/30:
   - start: 442
@@ -998,6 +1017,7 @@ unbestimmte Unmittelbare:
   WBPh:
   - start: 250
     suffix: f
+  - start: 284
 κρίνειν:
   WBPh:
   - start: 262
@@ -1009,10 +1029,12 @@ unbestimmte Unmittelbare:
   - start: 270
   - start: 271
   - start: 274
+  - start: 283
 λέγειν:
   WBPh:
   - end: 278
     start: 276
+  - start: 281
 λόγος:
   GA 29/30:
   - start: 441
@@ -1044,11 +1066,15 @@ unbestimmte Unmittelbare:
   WBPh:
   - start: 247
   - start: 269
+  - start: 283
 μορφή:
   WBPh:
   - end: 274
     start: 271
   - start: 275
+  - start: 281
+  - end: 286
+    start: 285
 μέθοδος:
   WBPh:
   - start: 269
@@ -1062,6 +1088,9 @@ unbestimmte Unmittelbare:
   - start: 265
   - start: 268
   - start: 270
+  - start: 281
+  - end: 285
+    start: 284
 πρῶτον ἀρρύθμιστον:
   WBPh:
   - start: 266
@@ -1084,6 +1113,9 @@ unbestimmte Unmittelbare:
   - end: 447
     start: 444
 τέλος:
+  VWPh:
+  - end: 283
+    start: 282
   WBPh:
   - start: 249
 τέχνη:
@@ -1102,6 +1134,7 @@ unbestimmte Unmittelbare:
   - end: 261
     start: 259
   - start: 270
+  - start: 281
 φύσις:
   FT:
   - start: 12
@@ -1143,6 +1176,16 @@ unbestimmte Unmittelbare:
 ἀίδιον:
   WBPh:
   - start: 267
+ἐντελέχεια:
+  WBPh:
+  - end: 282
+    start: 280
+  - end: 285
+    start: 284
+ἐνέργεια:
+  WBPh:
+  - end: 285
+    start: 282
 ἐπαγωγή:
   WBPh:
   - start: 242
@@ -1163,6 +1206,9 @@ unbestimmte Unmittelbare:
     start: 271
   - end: 279
     start: 278
+  - start: 281
+  - end: 286
+    start: 285
 ῥυθμός:
   WBPh:
   - start: 266
