--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -93,6 +93,7 @@ Aussehen:
     - end: 275
       start: 273
     - start: 283
+    - start: 287
 Baer, Karl Ernst von:
   references:
     GA 29/30:
@@ -140,7 +141,19 @@ Benommenheit, Offenheit der:
 Bewegtheit:
   references:
     WBPh:
+    - end: 243
+      start: 241
+    - end: 247
+      start: 245
+    - end: 250
+      start: 248
+    - start: 252
+    - start: 254
+    - start: 264
+    - start: 269
     - start: 282
+  related:
+  - κίνησις
 Beziehung zu Seiendem als Solchem:
   references:
     GA 29/30:
@@ -390,9 +403,12 @@ Geschick:
     - start: 12
       suffix: f
 Gestellung in das Aussehen:
+  parent: Aussehen
   references:
     WBPh:
     - start: 285
+  related:
+  - μορφή
 Geviert:
   references:
     EWI:
@@ -454,6 +470,12 @@ Grundverhältnis:
   references:
     GA 29/30:
     - start: 400
+Göttern:
+  references:
+    WBPh:
+    - start: 238
+  related:
+  - Gott
 Haben der Welt:
   references:
     GA 29/30:
@@ -524,6 +546,8 @@ Herstellen:
     - start: 272
     - start: 279
     - start: 283
+    - start: 283
+    - start: 287
 Hitler, Adolf:
   references:
     GA 42:
@@ -690,15 +714,17 @@ Natur:
     GA 29/30:
     - end: 404
       start: 402
+    WBPh:
+    - end: 241
+      start: 237
+    - start: 261
     WD:
     - start: 277
       suffix: ff
     ZEG:
     - start: 60
-Natura:
-  references:
-    SVG:
-    - start: 40
+  related:
+  - natura
 Neuzeit:
   references:
     GA 16:
@@ -961,6 +987,8 @@ Unverborgenheit:
     WBPh:
     - start: 268
     - start: 271
+    - start: 287
+      type: r
 Verbergen:
   references:
     GA 29/30:
@@ -1010,6 +1038,10 @@ Vorhandenen:
       start: 423
     - start: 434
       suffix: f
+Wachsen:
+  references:
+    WBPh:
+    - start: 287
 Welt:
   references:
     GA 29/30:
@@ -1070,6 +1102,12 @@ Wesen des Menschen:
       suffix: f
     ZEG:
     - start: 38
+Wie wenn am Feiertage...:
+  author: Hölderlin, Friedrich
+  references:
+    WBPh:
+    - start: 238
+  type: w
 Wissenschaft:
   references:
     GA 16:
@@ -1192,6 +1230,12 @@ im Ganzen:
       suffix: f
     - start: 441
     - start: 457
+natura:
+  references:
+    SVG:
+    - start: 40
+    WBPh:
+    - start: 237
 rechnende Denken:
   references:
     GA 16:
@@ -1216,6 +1260,14 @@ unbestimmte Unmittelbare:
     - start: 12
     WBPh:
     - start: 243
+γεν:
+  references:
+    WBPh:
+    - start: 236
+γένεσις:
+  references:
+    WBPh:
+    - start: 286
 διαίρεσις:
   references:
     GA 29/30:
@@ -1240,6 +1292,12 @@ unbestimmte Unmittelbare:
     - start: 273
       suffix: f
     - start: 282
+  related:
+  - Aussehen
+ζῷον:
+  references:
+    WBPh:
+    - start: 286
 ζῷον αλόγον:
   references:
     GA 29/30:
@@ -1284,12 +1342,15 @@ unbestimmte Unmittelbare:
     - start: 271
     - start: 274
     - start: 283
+    - start: 286
 λέγειν:
   references:
     WBPh:
     - end: 278
       start: 276
     - start: 281
+  related:
+  - λόγος
 λόγος:
   references:
     GA 29/30:
@@ -1325,6 +1386,7 @@ unbestimmte Unmittelbare:
     - start: 247
     - start: 269
     - start: 283
+    - start: 286
 μορφή:
   references:
     WBPh:
@@ -1334,6 +1396,7 @@ unbestimmte Unmittelbare:
     - start: 281
     - end: 286
       start: 285
+    - start: 286
 μέθοδος:
   references:
     WBPh:
@@ -1352,7 +1415,15 @@ unbestimmte Unmittelbare:
     - start: 281
     - end: 285
       start: 284
+ποίησις:
+  references:
+    WBPh:
+    - start: 287
+  related:
+  - Herstellen
+  - τέχνη
 πρῶτον ἀρρύθμιστον:
+  parent: ῥυθμός
   references:
     WBPh:
     - start: 266
@@ -1391,6 +1462,7 @@ unbestimmte Unmittelbare:
       suffix: f
     - start: 254
       suffix: f
+    - start: 287
 τόπος:
   references:
     WBPh:
@@ -1405,6 +1477,7 @@ unbestimmte Unmittelbare:
       start: 259
     - start: 270
     - start: 281
+    - start: 286
 φύσις:
   references:
     FT:
@@ -1442,6 +1515,17 @@ unbestimmte Unmittelbare:
     GA 29/30:
     - start: 484
     - start: 490
+ἀρχὴ κινήσεως:
+  parent: κίνησις
+  references:
+    WBP:
+    - start: 245
+    - start: 251
+    - start: 248
+    - start: 281
+  related:
+  - ἀρχή
+  - φύσις
 ἀρχή:
   references:
     WBPh:
@@ -1459,6 +1543,8 @@ unbestimmte Unmittelbare:
       start: 280
     - end: 285
       start: 284
+  related:
+  - ἐνέργεια
 ἐνέργεια:
   references:
     WBPh:
@@ -1476,6 +1562,8 @@ unbestimmte Unmittelbare:
     WBPh:
     - start: 273
       suffix: f
+  related:
+  - εἶδος
 ὑποκείμενον:
   references:
     WBPh:
